# edgerag

./: .coverage  .gitignore  Makefile  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
src/: base.py  config.py  download_models.py  index_dense.py  index_hybrid.py  index_quantized.py  prompts.py  rag_dense.py  rag_hybrid.py  rag_quantized.py  ui.py  utils.py
src/api/: app.py  models.py  routes.py
tests/: conftest.py
tests/e2e/: test_rag_pipeline.py
tests/integration/: test_api_routes.py  test_download_models.py
tests/unit/: test_api_models.py  test_base.py  test_config.py  test_prompts.py  test_utils.py
